- name: Feedback url should be shown

- sendBroadcast: com.ivanovsky.passnotes.automation/com.ivanovsky.passnotes.domain.test.TestDataBroadcastReceiver
  data:
    - key: isResetAppData
      value: true

- launch: com.ivanovsky.passnotes.automation
- assertVisible: KeePassVault
- tapOn:
    contentDescription: Navigate up
- tapOn: About
- assertVisible:
    hasText: https://github.com/aivanovski/passnotes/issues
