- name: Navigate back from about screen

- sendBroadcast: com.ivanovsky.passnotes.automation/com.ivanovsky.passnotes.domain.test.TestDataBroadcastReceiver
  data:
    - key: isResetAppData
      value: true

- launch: com.ivanovsky.passnotes.automation
- assertVisible: No databases
- tapOn:
    contentDescription: Navigate up
- tapOn: About
- assertVisible:
    hasText: KeePassVault is client for KeePass
- pressKey: Back
- assertVisible: No databases