- name: Create new database file
- project: KeePassVault

- sendBroadcast:
    name: com.ivanovsky.passnotes.automation/com.ivanovsky.passnotes.domain.test.TestDataBroadcastReceiver
    data:
      - key: isResetAppData
        value: true

- launch: com.ivanovsky.passnotes.automation

- tapOn:
    contentDescription: Add entry

- tapOn: New file
- tapOn: Add note templates
- tapOn: Not selected
- tapOn: Private app storage

- inputText:
    input: database
    contentDescription: File name

- inputText:
    input: abc123
    contentDescription: Password

- inputText:
    input: abc123
    contentDescription: Confirm password

- tapOn:
    contentDescription: Done

- waitUntil:
    notVisible:
      contentDescription: Loading indicator
    step: 1
    timeout: 10

- tapOn:
    text: DISABLE
    when:
      visible:
        hasText: Would you like to enable system notification for opened database 

- assertVisible: [Database, No items]
