- name: Create new group
- project: KeePassVault

- runFlow: Reset data and setup basic.kdbx database

- launch: com.ivanovsky.passnotes.automation
- inputText:
    input: abc123
    contentDescription: Password

- tapOn:
    contentDescription: Unlock button

- waitUntil:
    notVisible:
      contentDescription: Loading indicator
    step: 1
    timeout: 10

- tapOn:
    text: DISABLE
    when:
      visible:
        hasText: Would you like to enable system notification for opened database

- assertVisible: Basic entry

- tapOn:
    contentDescription: Add entry

- tapOn: New Group

- inputText:
    input: Basic Group
    contentDescription: Title

- tapOn:
    contentDescription: Done

- assertVisible: Basic Group
