- name: Failing test

- sendBroadcast: com.ivanovsky.passnotes.automation/com.ivanovsky.passnotes.domain.test.TestDataBroadcastReceiver
  data:
    - key: isResetAppData
      value: true

- launch: com.ivanovsky.passnotes.automation
- assertVisible: KeePassVault
- tapOn:
    contentDescription: Navigate up
- tapOn: Abb
- assertVisible:
    hasText: KeePassVault is client for KeePass
