- name: Unlock database with key file

- runFlow: Reset data
- sendBroadcast:
    name: com.ivanovsky.passnotes.automation/com.ivanovsky.passnotes.domain.test.TestDataBroadcastReceiver
    data:
      - key: fakeFileName
        value: basic-key-file.kdbx

- launch: com.ivanovsky.passnotes.automation

- assertVisible: basic-key-file.kdbx

- tapOn: ADD KEY

- tapOn: Fake File System

- inputText:
    input: content://fakefs.com
    contentDescription: URL

- inputText:
    input: user
    contentDescription: Username

- inputText:
    input: abc123
    contentDescription: Password

- tapOn:
    contentDescription: Done

- tapOn: keys/
- tapOn: key

- tapOn:
    contentDescription: Done

- assertVisible: [basic-key-file.kdbx, KEY]

- tapOn:
    contentDescription: Unlock button

- waitUntil:
    notVisible:
      contentDescription: Loading indicator
    step: 1
    timeout: 10

- tapOn:
    text: DISABLE
    when:
      visible:
        hasText: Would you like to enable system notification for opened database

- assertVisible: Basic entry