- name: Unlock database with password
- project: KeePassVault

- runFlow: Reset data and setup basic.kdbx database

- launch: com.ivanovsky.passnotes.automation

- assertVisible: basic.kdbx


- inputText:
    input: abc123
    contentDescription: Password

- tapOn:
    contentDescription: Unlock button

- waitUntil:
    notVisible:
      contentDescription: Loading indicator
    step: 1
    timeout: 10

- tapOn:
    text: DISABLE
    when:
      visible:
        hasText: Would you like to enable system notification for opened database

- assertVisible: Basic entry
