- name: Remove selected database file

- sendBroadcast: com.ivanovsky.passnotes.automation/com.ivanovsky.passnotes.domain.test.TestDataBroadcastReceiver
  data:
    - key: isResetAppData
      value: true

- sendBroadcast: com.ivanovsky.passnotes.automation/com.ivanovsky.passnotes.domain.test.TestDataBroadcastReceiver
  data:
    - key: fakeFileName
      value: passwords.kdbx

- launch: com.ivanovsky.passnotes.automation
- assertVisible: content://fakefs.com/demo/passwords.kdbx
- assertNotVisible: Remove
- longTapOn: content://fakefs.com/demo/passwords.kdbx
- tapOn: Remove
- assertVisible: No databases